<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notifications.EmergencyCallActivity">

    <TextView
        android:id="@+id/notice1"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/emergency_send_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/timeLeft"
        android:textSize="50sp"
        android:text="0"
        android:paddingTop="25sp"
        android:paddingBottom="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/notice2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/emergency_send_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timeLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/cancelCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_cancel"
        android:onClick="onClick"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/notice2"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>