<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:id="@+id/remoteUser"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:text="@string/sample_call_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/callState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_status"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/callDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/call_duration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="0dip"
        android:layout_weight="3"
        android:background="@mipmap/ic_launcher_round" android:orientation="vertical">

        <RelativeLayout android:id="@+id/remoteVideo" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" android:orientation="horizontal"/>

        <RelativeLayout
            android:id="@+id/localVideo"
            android:layout_width="120dp"
            android:layout_height="158dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:layout_weight="1">

        <Button
            android:id="@+id/hangupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/round_button_accented"
            android:backgroundTint="#DC143C"
            android:paddingBottom="20dp"
            android:drawableLeft="@drawable/ic_hangup"
            android:drawablePadding="20sp"
            android:drawableTint="@android:color/white"
            android:text= "@string/end_call"
            android:textColor="@android:color/white"
            android:paddingTop="20dp" />

    </RelativeLayout>

</LinearLayout>
