<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:gravity="center_vertical"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileImageText"
        android:layout_width="0sp"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:gravity="center_vertical"
        android:text="@string/profile_image"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/optionHelp"
        app:layout_constraintStart_toEndOf="@id/optionMenu" />

    <Button
        android:id="@+id/confirmChange"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/round_button_accented"
        android:drawableLeft="@drawable/ic_confirm_image"
        android:drawablePadding="-28dp"
        android:padding="10dp"
        android:onClick="onClick"
        android:text="@string/profile_image_confirm_change"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/selectImage"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/round_button_accented"
        android:drawableLeft="@drawable/ic_profile_image"
        android:drawablePadding="-28dp"
        android:padding="10dp"
        android:onClick="onClick"
        android:text="@string/profile_image_select"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/confirmChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selectImage"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"/>

    <TextView
        android:id="@+id/progressBarMsg"
        android:text="@string/progress_bar_msg"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@id/progressBar"/>

    <Button
        android:id="@+id/optionMenu"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:paddingStart="5sp"
        android:paddingEnd="10sp"
        android:layout_marginStart="5sp"
        android:background="@color/background"

        android:drawableLeft="@drawable/ic_menu_home"

        android:drawableTint="@color/blue"
        android:drawablePadding="5sp"
        android:onClick="onClick"
        android:text="@string/options_menu"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/titleBar"
        app:layout_constraintTop_toTopOf="@id/titleBar"
        app:layout_constraintBottom_toBottomOf="@id/titleBar"/>

    <Button
        android:id="@+id/optionHelp"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:paddingStart="5sp"
        android:paddingEnd="10sp"
        android:layout_marginEnd="5sp"
        android:background="@color/emergencyBackground"
        android:drawableLeft="@drawable/bell_resized"
        android:drawableTint="@color/emergencyText"
        android:drawablePadding="5sp"
        android:onClick="onClick"
        android:text="@string/help"
        android:enabled="false"
        android:textColor="@color/emergencyText"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/titleBar"
        app:layout_constraintTop_toTopOf="@id/titleBar"
        app:layout_constraintBottom_toBottomOf="@id/titleBar"/>


</android.support.constraint.ConstraintLayout>