<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".communication.ChatActivity"
    tools:layout_editor_absoluteY="25dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:gravity="center_vertical"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="0sp"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:gravity="center_vertical"
        android:text="@string/contact_name"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/optionHelp"
        app:layout_constraintStart_toEndOf="@id/optionMenu" />

    <ListView
        android:id="@+id/msgView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:dividerHeight="5sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        app:layout_constraintBottom_toTopOf="@id/textInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:transcriptMode="alwaysScroll"/>

    <Button
        android:id="@+id/sendMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/send_message"
        android:onClick="onClick"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button_accented"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/textInputs"
        android:layout_width="0sp"
        android:layout_height="45sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_marginBottom="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectImage"
        app:layout_constraintEnd_toStartOf="@id/sendMsg"
        android:hint="@string/write_your_message"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/optionMenu"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:paddingStart="5sp"
        android:paddingEnd="10sp"
        android:layout_marginStart="5sp"
        android:background="@color/background"
        android:drawableLeft="@drawable/ic_menu_home"
        android:drawableTint="@color/blue"
        android:drawablePadding="5sp"
        android:onClick="onClick"
        android:text="@string/options_menu"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/titleBar"
        app:layout_constraintTop_toTopOf="@id/titleBar"
        app:layout_constraintBottom_toBottomOf="@id/titleBar"/>

    <Button
        android:id="@+id/optionHelp"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:paddingStart="5sp"
        android:paddingEnd="10sp"
        android:layout_marginEnd="5sp"
        android:background="@color/emergencyBackground"
        android:drawableLeft="@drawable/bell_resized"
        android:drawableTint="@color/emergencyText"
        android:drawablePadding="5sp"
        android:onClick="onClick"
        android:text="@string/help"
        android:enabled="false"
        android:textColor="@color/emergencyText"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/titleBar"
        app:layout_constraintTop_toTopOf="@id/titleBar"
        app:layout_constraintBottom_toBottomOf="@id/titleBar"/>

    <ImageView
        android:id="@+id/selectImage"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        app:srcCompat="@drawable/ic_menu_gallery"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:backgroundTintMode="src_atop"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/sendMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInputs"
        app:layout_constraintTop_toTopOf="@id/sendMsg" />

</android.support.constraint.ConstraintLayout>

    <!-- -->